[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lights/LightChanger.gd" type="Script" id=1]
[ext_resource path="res://Lights/Textures/light_orb.png" type="Texture" id=2]

[node name="RunwayLight" type="Node2D"]
script = ExtResource( 1 )

[node name="InsetLight" type="Light2D" parent="."]
position = Vector2( -0.119209, -0.0368843 )
texture = ExtResource( 2 )
texture_scale = 0.07
color = Color( 0.980392, 0.415686, 0.0392157, 1 )
energy = 2.0

[node name="GlowLight" type="Light2D" parent="."]
position = Vector2( -0.119209, -0.0368843 )
texture = ExtResource( 2 )
texture_scale = 0.75
color = Color( 0.980392, 0.415686, 0.0392157, 1 )
energy = 1.25

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
